Fix overflow bug with the title

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -27,6 +27,7 @@
 .Main {
   z-index: 2;
   position: relative;
+  overflow: hidden;
 }
 
 @media (min-width: 40rem) {
